--- a/TG-Netflix/package.json
+++ b/TG-Netflix/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.1",
     "react-youtube": "^10.0.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
